--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright 2017 Yan Zhenjie
 
     Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,9 +14,9 @@
     limitations under the License.
 -->
 <resources>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1E88E5</color>
-    <color name="colorAccent">@color/colorPrimary</color>
+    <color name="colorPrimary">#E74C5B</color>
+    <color name="colorPrimaryDark">#df4655</color>
+    <color name="colorAccent">#E74C5B</color>
     <color name="colorPrimaryBlack">#FF2B2B2B</color>
 
     <color name="white">#FFFFFFFF</color>
