--- a/album/src/main/res/menu/album_menu_album.xml
+++ b/album/src/main/res/menu/album_menu_album.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright 2017 Yan Zhenjie
 
     Licensed under the Apache License, Version 2.0 (the "License");
@@ -19,7 +18,7 @@
 
     <item
         android:id="@+id/album_menu_finish"
-        android:icon="@drawable/album_ic_done_white"
+        android:icon="?attr/album_icon_action_done"
         android:title="@string/album_menu_finish"
         app:showAsAction="always|withText" />
 </menu>
